--- a/css.css
+++ b/css.css
@@ -1,27 +1,39 @@
-/* black background for bar */
-.topnav {
-    background-color: #333;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
-}
-
-/* style for links */
-.topnav a {
+    background-color: #333;
+  }
+  
+  li {
     float: left;
-    color: #f2f2f2;
+  }
+  
+  li a {
+    display: block;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+  }
+  
+  /* Change the link color to black on hover */
+  li a:hover {
+    background-color: #111;
   }
 
-  /* change color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-
-  /* color for active link */
-  .topnav a.active {
+  .active {
     background-color: #04AA6D;
-    color: white;
+  }
+
+  /* Add a gray right border to all list items */
+li {
+    border-right: 1px solid #bbb;
+  }
+  
+  ul {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
   }
